# NBU_CITB105_Homework

./: .gitignore  CMakeLists.txt  README.md
Theme1/: .gitignore  CMakeLists.txt  README.md
Theme1/Exercise1/: CMakeLists.txt  main.cpp
Theme1/Exercise2/: CMakeLists.txt  main.cpp
Theme1/Exercise3/: CMakeLists.txt  main.cpp
Theme1/Exercise4/: CMakeLists.txt  main.cpp
Theme1/Exercise5/: CMakeLists.txt  main.cpp
Theme1/Exercise6/: CMakeLists.txt  main.cpp
Theme1/Exercise7/: CMakeLists.txt  main.cpp
Theme1/Exercise8/: CMakeLists.txt  main.cpp
Theme1/Exercise9/: CMakeLists.txt  main.cpp
Theme2/: CMakeLists.txt  README.md
Theme2/Exercise1/: CMakeLists.txt  main.cpp  main.h
Theme2/Exercise2/: main.cpp
Theme2/Exercise3/: main.cpp  main.h
Theme2/Exercise4/: main.cpp
Theme2/Exercise5/: CMakeLists.txt  main.cpp  main.h
Theme2/Exercise6/: CMakeLists.txt  main.cpp
Theme2/Exercise9/: CMakeLists.txt  main.cpp
