cmake_minimum_required(VERSION 3.0)
project(Theme1)

add_subdirectory(Exercise1)
add_subdirectory(Exercise2)
add_subdirectory(Exercise3)
add_subdirectory(Exercise4)
add_subdirectory(Exercise5)
add_subdirectory(Exercise6)
add_subdirectory(Exercise7)
add_subdirectory(Exercise8)
add_subdirectory(Exercise9)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

